<resources>
    <string name="app_name">My E-house</string>
    <string name="button_enter">Enter</string>
    <string name="goto_rooms1">Stanza 1</string>
    <string name="goto_rooms2">Stanza 2</string>
    <string name="goto_rooms3">Stanza 3</string>
    <string name="allarm">Sveglia</string>
    <string-array name="planets_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="title_home">My E-House</string>
    <string-array name="roller_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="Enter_name">Enter room name</string>
    <string name="title_r1">Room 1</string>
    <string name="goto_roller1">Roller shutter 1</string>
    <string name="goto_roller2">Roller shutter 2</string>
    <string name="goto_roller3">Roller shutter 3</string>
    <string name="roller1_name">Roller shutter 1</string>
    <string name="goto_roller4">Roller shutter 4</string>
    <string name="goto_roller5">Roller shutter 5</string>
    <string name="goto_roller6">Roller shutter 6</string>
</resources>